--- a/BugTrack_UI/_Imports.razor
+++ b/BugTrack_UI/_Imports.razor
@@ -10,4 +10,6 @@
 @using BugTrack_UI.Shared
 @using AppData.Models
 @using Fluxor
-@using Fluxor.Blazor.Web.Components 
+@using Fluxor.Blazor.Web.Components
+@using Blazored.Toast
+@using Blazored.Toast.Services
