Correct created timestamp.

--- a/BugTrack_UI/Components/EditModal.razor
+++ b/BugTrack_UI/Components/EditModal.razor
@@ -82,7 +82,7 @@
 
                 <!-- Modal footer -->
                 <div class="modal-footer align-content-center">
-                   <small>This bug was created by: @EditingBug.CreatedBy on @EditingBug.CreatedDate!.Value.ToShortDateString()  at @string.Format("{0} {1}", EditingBug.UpdatedDate!.Value.ToShortTimeString(), EditingBug.UpdatedDate!.Value.Hour > 12 ? "PM" : "AM")  </small>
+                   <small>This bug was created by: @EditingBug.CreatedBy on @EditingBug.CreatedDate!.Value.ToShortDateString()  at @string.Format("{0} {1}", EditingBug.CreatedDate!.Value.ToShortTimeString(), EditingBug.CreatedDate!.Value.Hour > 12 ? "PM" : "AM")  </small>
                 </div>
 
             </div>
