fix typo Desription => Description.

--- a/BugTrack_UI/Components/CreateModal.razor
+++ b/BugTrack_UI/Components/CreateModal.razor
@@ -32,7 +32,7 @@
                         </div>
 
                         <div class="mb-3">
-                            <label for="editBugDescription" class="form-label">Bug Desription</label>
+                            <label for="editBugDescription" class="form-label">Bug Description</label>
                             <InputTextArea rows="10" class="form-control" id="editBugDescription" @bind-Value="@EditingBug.Description" type="text"></InputTextArea>
                         </div>
                         <div class="mb-3">
