--- a/BugTrack_UI/Pages/AllBugs.razor
+++ b/BugTrack_UI/Pages/AllBugs.razor
@@ -16,22 +16,23 @@
         <h3> <span class="oi oi-bug" aria-hidden="true"></span>Bug Manager</h3>
         <br/>
         <div class="row">
-            <div class="col-3">
+            <div class="col-lg-3 col-sm-5">
                 <button class="btn btn-black" @onclick="CreateBug">
 
                      <span class="oi oi-plus" aria-hidden="true"></span>
                     Create New Bug
                 </button>
             </div>
-            <div class="col-5">
+            <div class="d-lg-none"><br/></div>
+            <div class="col-lg-5 col-sm-6 col-xs-6 pb-xs-3 mb-sm-3">
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
                     </div>
-                    <div class="input-group-text group-black">Search bugs<p class="oi oi-magnifying-glass"></p></div>
+                    <div class="input-group-text group-black">Search<p class="oi oi-magnifying-glass"></p></div>
                     <input class="form-control me-1" value="@BugState.Value.SearchText" @oninput="GetSearch" type="text" placeholder="Search for bug" aria-label="Search">
                 </div>
             </div>
-            <div class="col-3">
+            <div class="col-lg-3 col-xs-12 col-sm-12">
                 <div class="form-check">
                     <input class="form-check-input" type="checkbox" value="@BugState.Value.AssignedToMe" checked="@BugState.Value.AssignedToMe" @oninput="CheckboxChanged" id="assignedToMe">
                     <label class="form-check-label" for="assignedToMe">
