--- a/BugTrack_UI/Pages/_Host.cshtml
+++ b/BugTrack_UI/Pages/_Host.cshtml
@@ -14,7 +14,7 @@
     <link href="BugTrack_UI.styles.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png"/>
     <component type="typeof(HeadOutlet)" render-mode="Server" />
-    <script src="_content/Fluxor.Blazor.Web/scripts/index.js"></script>
+    @*<script src="_content/Fluxor.Blazor.Web/scripts/index.js"></script>*@
 </head>
 <body>
     <component type="typeof(App)" render-mode="Server" />
